syntax = "proto3";

package rpcbench;
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


message BalanceSummary {
    string	UUID        =1;
    string	ID          =2;
    string	Type        =3;
    double	Value       =4;
    bool	Disabled    =5;
}

message AccountSummary {
	string                  Tenant           =1;
	string                  ID               =2;
	repeated BalanceSummary BalanceSummaries =3;
	bool                    AllowNegative    =4;
	bool                    Disabled         =5;
}

message Rate {
	google.protobuf.Duration GroupIntervalStart =1;
	double                   Value              =2;
	google.protobuf.Duration RateIncrement      =3;
	google.protobuf.Duration RateUnit           =4;
}

message RIRate {
	double          ConnectFee       =1;
	string          RoundingMethod   =2;
	int32           RoundingDecimals =3;
	double          MaxCost          =4;
	string          MaxCostStrategy  =5;
	repeated Rate   Rates            =6;
	string          tag              =7;
}

message RITiming {
	repeated int32  Years      =1;
	repeated int32  Months     =2;
	repeated int32  MonthDays  =3;
	repeated int32  WeekDays   =4;
	string          StartTime  =5;
    string          EndTime    =6;
    string          cronString =7;
	string          tag        =8;
}

message RateInterval {
	RITiming Timing =1;
	RIRate   Rating =2;
	double   Weight =3;
}

message RatingInfo {
	string                      MatchedSubject =1;
	string                      RatingPlanId   =2;
	string                      MatchedPrefix  =3;
	string                      MatchedDestId  =4;
	google.protobuf.Timestamp   ActivationTime =5;
	repeated RateInterval       RateIntervals  =6;
	repeated string             FallbackKeys   =7;
}

message UnitInfo {
	string          UUID          =1;
	string          ID            =2;
	double          Value         =3;
	string          DestinationID =4;
	double          Consumed      =5;
	string          TOR           =6;
	RateInterval    RateInterval  =7;
}

message MonetaryInfo {
	string          UUID         =1;
	string          ID           =2;
	double          Value        =3;
	RateInterval    RateInterval =4;
}

message DebitInfo {
	UnitInfo        Unit      =1;
	MonetaryInfo    Monetary  =2;
	string          AccountID =3;
}

message Increment {
	google.protobuf.Timestamp   Duration       =1;
	double                      Cost           =2;
	DebitInfo                   BalanceInfo    =3;
	int32                       CompressFactor =4;
	bool                        paid           =5;
}

message TimeSpan {
    google.protobuf.Timestamp   TimeStart       =1;
    google.protobuf.Timestamp   TimeEnd         =2;
	double                      Cost            =3;
	RateInterval                RateInterval    =4;
	google.protobuf.Duration    DurationIndex   =5;
	repeated Increment          Increments      =6;
	Increment                   RoundIncrement  =7;
    string                      MatchedSubject  =8;
    string                      MatchedPrefix   =9;
    string                      MatchedDestId   =10;
    string                      RatingPlanId    =11;
	int32                       CompressFactor  =12;
	RatingInfo                  ratingInfo      =13;
}

message CallCost {
    string              Category            =1;
    string              Tenant              =2;
    string              Subject             =3;
    string              Account             =4;
    string              Destination         =5;
    string              TOR                 =6;
	double              Cost                =7;
	repeated TimeSpan   Timespans           =8;
	double              RatedUsage          =9;
	AccountSummary      AccountSummary      =10;
	bool                deductConnectFee    =11;
	bool                negativeConnectFee  =12;
	bool                maxCostDisconect    =13;
}



message CallDescriptor {
    string                    Category            =1;                          
    string                    Tenant              =2;
    string                    Subject             =3;
    string                    Account             =4;
    string                    Destination         =5; 
    google.protobuf.Timestamp TimeStart           =6;
    google.protobuf.Timestamp TimeEnd             =7;                    
    double                    LoopIndex           =8;
    google.protobuf.Duration  DurationIndex       =9;
    string                    FallbackSubject     =10;
    repeated RatingInfo       RatingInfos         =11;                           
    repeated Increment        Increments          =12;
    string                    TOR                 =13;
    map<string,string>        ExtraFields         =14;
    double                    MaxRate             =15;
    google.protobuf.Duration  MaxRateUnit         =16;
    double                    MaxCostSoFar        =17;
    string                    CgrID               =18;
    string                    RunID               =19;               
    bool                      ForceDuration       =20;       
    bool                      PerformRounding     =21;     
    bool                      DryRun              =22;              
    bool                      DenyNegativeAccount =23;
    CallCost                  testCallcost        =24;
  }
  